# context-aware-rag

./: .pre-commit-config.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report_form.yml  config.yml  documentation_request.yml  feature_request_form.yml
.github/workflows/: deploy-pages.yaml
