# SPDX-FileCopyrightText: Copyright (c) 2024-2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64"]

[project]
name = "vss_ctx_rag"
version = "1.0.2"
description = ""
readme = "README.md"
requires-python = ">=3.12"
license-files = ["LICENSE", "LICENSE.3rdparty"]
dependencies = [
  "openai==1.109.1",
  "langchain_core==0.3.80",
  "langchain==0.3.27",
  "langchain_community==0.3.31",
  "langchain_milvus==0.2.1",
  "langchain-openai==0.3.35",
  "langchain-experimental==0.3.4",
  "langchain-nvidia-ai-endpoints==0.3.19",
  "pymilvus==2.5.14",
  "pymilvus-model==0.3.2",
  "python-multipart==0.0.18",
  "pydantic==2.12.5",
  "pyyaml==6.0.2",
  "protobuf==6.33.5",
  "redis==5.2.1",
  "unstructured[all-docs]==0.18.21",
  "uvicorn[standard]==0.32.0",
  "fastapi==0.115.5",
  "requests==2.32.5",
  "jsonschema==4.22.0",
  "schema==0.7.8",
  "json-repair==0.30.2",
  "opentelemetry-sdk==1.39.1",
  "opentelemetry-api==1.39.1",
  "opentelemetry-exporter-otlp-proto-http==1.39.1",
  "opentelemetry-instrumentation-fastapi==0.60b1",
  "nvtx==0.2.11",
  "matplotlib==3.9.4",
  "torch==2.9.1",
  "safetensors==0.4.4",
  "minio==7.2.15",
  "pyaml-env==1.2.2",
  "bleach==6.2.0",
  "dataclass-wizard==0.27.0",
  "pdfplumber==0.11.8",
  "nvidia-rag==2.2.2",
  "openinference-semantic-conventions==0.1.25",
  "openinference-instrumentation-openai==0.1.41",
  "openinference-instrumentation-langchain==0.1.56",
  "neo4j==5.24.0",
  "fastmcp==2.13.0.2",
  "langgraph==1.0.1",
  "langchain-elasticsearch==0.4.0",
  "opencv-python==4.12.0.88",
  "numba==0.61.2",
  "llvmlite==0.44.0",
]

[project.urls]
Homepage = "https://github.com/NVIDIA/context-aware-rag"
Documentation = "https://nvidia.github.io/context-aware-rag/index.html"
Repository = "https://github.com/NVIDIA/context-aware-rag"

[tool.setuptools.packages.find]
where = ["src"]
include = ["vss_ctx_rag.*"]

[tool.setuptools.package-data]
"vss_ctx_rag" = ["data/*"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.setuptools]
include-package-data = true


[tool.uv]
managed = true
config-settings = { editable_mode = "compat" }
package = true

[tool.uv.sources]
vss_ctx_rag_arango = { workspace = true }
vss_ctx_rag_nat = { workspace = true }

[project.optional-dependencies]
docs = [
  "ipython~=8.31",
  "myst-parser~=4.0",
  "nbsphinx~=0.9",
  "nvidia-sphinx-theme>=0.0.7",
  "sphinx~=8.2",
  "sphinx-copybutton>=0.5",
  "sphinx-autoapi>=3.6",
  "vale==3.9.5",
  "setuptools-scm>=8.1.0",
  "sphinxcontrib-mermaid>=1.0.0"
]

arango = ["vss_ctx_rag_arango"]
nat = ["vss_ctx_rag_nat"]
